--- a/app/src/main/res/layout/activity_edit_procedure.xml
+++ b/app/src/main/res/layout/activity_edit_procedure.xml
@@ -174,7 +174,7 @@
         android:id="@+id/editProcedurePb"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#B2B2B2"
+        android:background="@color/white"
         android:indeterminate="true"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
