--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -13,12 +13,12 @@
         android:id="@+id/findLearnerButton"
         android:layout_width="300dp"
         android:layout_height="60dp"
-        android:layout_gravity="center_horizontal"
         android:backgroundTint="@color/white"
         android:text="@string/find_learner"
         android:textColor="@color/green"
         android:textSize="16sp"
         android:textStyle="bold"
+        app:cornerRadius="10dp"
         app:icon="@drawable/find_learner_icon"
         app:iconGravity="textStart"
         app:iconSize="25dp"
@@ -28,12 +28,13 @@
         android:id="@+id/addLearnerButton"
         android:layout_width="300dp"
         android:layout_height="60dp"
-        android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/white"
         android:text="@string/add_learner"
         android:textColor="@color/green"
         android:textSize="16sp"
+        android:textStyle="bold"
+        app:cornerRadius="10dp"
         app:icon="@drawable/add_learner_icon"
         app:iconGravity="textStart"
         app:iconSize="25dp"
@@ -43,12 +44,12 @@
         android:id="@+id/logoutBtn"
         android:layout_width="300dp"
         android:layout_height="60dp"
-        android:layout_gravity="center_horizontal"
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/light_red"
         android:backgroundTintMode="src_over"
         android:text="Log out"
         android:textSize="16sp"
+        app:cornerRadius="10dp"
         app:iconGravity="textStart"
         app:iconSize="25dp" />
 
