--- a/app/src/main/res/layout/procedure_layout.xml
+++ b/app/src/main/res/layout/procedure_layout.xml
@@ -44,7 +44,7 @@
 
             <TextView
                 android:id="@+id/performedByTv"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:text="Dr Innocent Ramatladi"
@@ -52,7 +52,7 @@
 
             <TextView
                 android:id="@+id/datePerformedTv"
-                android:layout_width="wrap_content"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
                 android:text="03 January 2023"
